style for code, pre, hr, blockquote

--- a/_src/styles/_common.scss
+++ b/_src/styles/_common.scss
@@ -15,11 +15,11 @@ $global-width: 1000px;
 
 $color-rule-1: #444;
 $color-rule-2: #ecf0f1;
-$color-rule-3: white;
+$color-rule-3: #ecf0f1;
 $color-rule-4: #4BB5C1;
 $color-rule-5: #A9CC66;
 // color rule
 
-$light-font-color: $color-rule-3;
+$light-font-color: white;
 
 $font-color: #666;
