--- a/public/css/app.css
+++ b/public/css/app.css
@@ -291,43 +291,42 @@ pre, code {
 .header-container .site-owner .owner-info a:hover {
   color: black;
 }
-/* line 6, _src/styles/markdown.scss */
+/* line 5, _src/styles/markdown.scss */
 .md {
   line-height: 2em;
 }
-/* line 9, _src/styles/markdown.scss */
+/* line 8, _src/styles/markdown.scss */
 .md h1, .md h2, .md h3, .md h4, .md h5 {
   margin: 1.5em 0;
 }
-/* line 13, _src/styles/markdown.scss */
+/* line 12, _src/styles/markdown.scss */
 .md h1 {
   font-size: 2.5em;
 }
-/* line 17, _src/styles/markdown.scss */
+/* line 16, _src/styles/markdown.scss */
 .md h2 {
   font-size: 2em;
 }
-/* line 21, _src/styles/markdown.scss */
+/* line 20, _src/styles/markdown.scss */
 .md h3 {
   font-size: 1.5em;
 }
-/* line 25, _src/styles/markdown.scss */
+/* line 24, _src/styles/markdown.scss */
 .md h4 {
   font-size: 1.2em;
 }
-/* line 29, _src/styles/markdown.scss */
+/* line 28, _src/styles/markdown.scss */
 .md h5 {
   font-size: 1em;
   font-weight: bold;
 }
-/* line 34, _src/styles/markdown.scss */
+/* line 33, _src/styles/markdown.scss */
 .md p, .md pre {
   margin: 1em 0;
 }
-/* line 38, _src/styles/markdown.scss */
+/* line 37, _src/styles/markdown.scss */
 .md code, .md pre {
-  border: 1px solid #b1c2c6;
-  background-color: #ecf0f1;
+  background-color: white;
   padding: 2px 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -335,54 +334,55 @@ pre, code {
   -o-border-radius: 5px;
   border-radius: 5px;
 }
-/* line 45, _src/styles/markdown.scss */
+/* line 43, _src/styles/markdown.scss */
 .md pre {
+  border: 1px solid #b1c2c6;
   padding: 10px 20px;
   overflow: scroll;
 }
-/* line 50, _src/styles/markdown.scss */
+/* line 49, _src/styles/markdown.scss */
 .md pre code {
   border: none;
   background: none;
   padding: 0;
 }
-/* line 56, _src/styles/markdown.scss */
+/* line 55, _src/styles/markdown.scss */
 .md .highlight {
   background: none;
 }
-/* line 60, _src/styles/markdown.scss */
+/* line 59, _src/styles/markdown.scss */
 .md ul, .md ol {
   margin: 1em 0px;
   padding-left: 2em;
 }
-/* line 64, _src/styles/markdown.scss */
+/* line 63, _src/styles/markdown.scss */
 .md ul ul, .md ol ul {
   list-style: circle;
 }
-/* line 68, _src/styles/markdown.scss */
+/* line 67, _src/styles/markdown.scss */
 .md ul ol, .md ol ol {
   list-style: lower-latin;
 }
-/* line 73, _src/styles/markdown.scss */
+/* line 72, _src/styles/markdown.scss */
 .md ul {
   list-style: disc;
 }
-/* line 77, _src/styles/markdown.scss */
+/* line 76, _src/styles/markdown.scss */
 .md ol {
   list-style: decimal;
 }
-/* line 81, _src/styles/markdown.scss */
+/* line 80, _src/styles/markdown.scss */
 .md hr {
   border-top: 1px dashed #b1c2c6;
   border-left: none;
 }
-/* line 86, _src/styles/markdown.scss */
+/* line 85, _src/styles/markdown.scss */
 .md blockquote {
   color: #999999;
   padding: 0 0 0 30px;
   position: relative;
 }
-/* line 91, _src/styles/markdown.scss */
+/* line 90, _src/styles/markdown.scss */
 .md blockquote:before {
   font-family: FontAwesome;
   font-size: 1.5em;
@@ -477,6 +477,10 @@ pre, code {
 }
 
 /* line 73, _src/styles/post.scss */
+.md.post-content code, .md.post-content pre {
+  background-color: #ecf0f1;
+}
+/* line 77, _src/styles/post.scss */
 .md.post-content pre {
   width: 100%;
   margin-left: -41px;
