reduce line-height in <pre>

--- a/_src/styles/markdown.scss
+++ b/_src/styles/markdown.scss
@@ -44,6 +44,7 @@ $border-color: darken($color-rule-2, 20%);
     border: 1px solid $border-color;
     padding: 10px 20px;
     overflow: scroll;
+    line-height: 1.5em;
   }
 
   pre code {
