change avatar, new image is my dog.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
             <li class="owner-weibo"><a href="{{ site.author.weibo.url }}" target="_blank">{{ site.author.weibo.name }}</a>&nbsp;<i class="icon-weibo"></i></li>
             <li class="owner-twitter"><a href="{{ site.author.twitter.url }}" target="_blank">{{ site.author.twitter.name }}</a>&nbsp;<i class="icon-twitter"></i></li>
           </ul>
-          <img src="/public/img/avatar.png" alt="" class="owner-avatar"><b></b>
+          <img src="/img/avatar.png" alt="" class="owner-avatar"><b></b>
         </div>
       </div>
     </div>
