add link for avatar-img & better url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <ul class="site-menu">
           <li><a href="/"><b></b><span><i class="icon-home icon-large"></i>&nbsp;HOME</span></a></li>
           <li><a href="https://github.com/{{ site.author.github }}" target="_blank"><b></b><span><i class="icon-github icon-large"></i>&nbsp;GITHUB</span></a></li>
-          <li><a href="/about.html"><b></b><span><i class="icon-smile icon-large"></i>&nbsp;ABOUT</span></a></li>
+          <li><a href="/about"><b></b><span><i class="icon-smile icon-large"></i>&nbsp;ABOUT</span></a></li>
         </ul>
         <div class="site-owner">
           <ul class="owner-info">
@@ -33,7 +33,7 @@
             <li class="owner-weibo"><a href="{{ site.author.weibo.url }}" target="_blank">{{ site.author.weibo.name }}</a>&nbsp;<i class="icon-weibo"></i></li>
             <li class="owner-twitter"><a href="{{ site.author.twitter.url }}" target="_blank">{{ site.author.twitter.name }}</a>&nbsp;<i class="icon-twitter"></i></li>
           </ul>
-          <img src="/img/avatar.png" alt="" class="owner-avatar"><b></b>
+          <a href="/about"><img src="/img/avatar.png" alt="" class="owner-avatar"><b></b></a>
         </div>
       </div>
     </div>
