--- a/public/css/app.css
+++ b/public/css/app.css
@@ -500,23 +500,94 @@ pre, code {
   -moz-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5);
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.5);
 }
-/* line 3, _src/styles/s404.scss */
+/* line 6, _src/styles/s404.scss */
 .s404-container {
-  padding: 100px 0;
+  padding: 50px 0;
+}
+
+/* line 10, _src/styles/s404.scss */
+.s404-bread {
+  display: inline-block;
+  vertical-align: middle;
   position: relative;
 }
-/* line 7, _src/styles/s404.scss */
-.s404-container .back {
+/* line 15, _src/styles/s404.scss */
+.s404-bread img {
+  width: 300px;
+  height: 450px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+}
+/* line 21, _src/styles/s404.scss */
+.s404-bread img + b {
+  display: block;
+  position: absolute;
+  width: 298px;
+  height: 448px;
+  top: 0;
+  left: 0;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+}
+/* line 33, _src/styles/s404.scss */
+.s404-bread .self-intro {
+  display: block;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  white-space: nowrap;
+  padding: 10px;
+  background-color: white;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+  -webkit-transition: opacity 0.5s;
+  -moz-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+/* line 52, _src/styles/s404.scss */
+.s404-bread:hover .self-intro {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+}
+
+/* line 58, _src/styles/s404.scss */
+.s404-content {
+  width: 688px;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+}
+/* line 64, _src/styles/s404.scss */
+.s404-content .back {
   font-size: 15em;
   text-align: center;
 }
-/* line 12, _src/styles/s404.scss */
-.s404-container .front {
+/* line 69, _src/styles/s404.scss */
+.s404-content .front {
   position: absolute;
   text-align: center;
-  width: 50%;
+  width: 70%;
   top: 50%;
-  left: 25%;
+  left: 15%;
   line-height: 2.5em;
   border-top: 4px solid #666666;
   border-bottom: 4px solid #666666;
