--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
             <li class="owner-position">{{ site.author.position }}&nbsp;<i class="icon-map-marker"></i></li>
             <li class="owner-weibo"><a href="{{ site.author.weibo.url }}" target="_blank">{{ site.author.weibo.name }}</a>&nbsp;<i class="icon-weibo"></i></li>
             <li class="owner-twitter"><a href="{{ site.author.twitter.url }}" target="_blank">{{ site.author.twitter.name }}</a>&nbsp;<i class="icon-twitter"></i></li>
+            <li class="owner-rss"><a href="/atom.xml">Subscribe</a>&nbsp;<i class="icon-rss"></i></li>
           </ul>
           <a href="/about"><img src="/img/avatar.png" alt="" class="owner-avatar"><b></b></a>
         </div>
