make header fixed when scroll down

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,9 @@
           </ul>
           <a href="/about"><img src="/img/avatar.png" alt="" class="owner-avatar"><b></b></a>
         </div>
+        <div class="site-control">
+          <a href="/atom.xml" class="control-rss"><i class="icon-rss"></i>&nbsp;Subscribe</a>
+        </div>
       </div>
     </div>
     <div class="content">
@@ -58,5 +61,8 @@
         </span>
       </div>
     </div>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="/public/js/app.js"></script>
+    <script>require("app")</script>
   </body>
 </html>
