--- a/_src/styles/content.scss
+++ b/_src/styles/content.scss
@@ -2,7 +2,7 @@
 
 .content-container {
   width: $global-width;
-  margin: 90px auto;
+  margin: 180px auto 90px;
 
   .disqus-wrap {
     margin-top: 80px;
