--- a/public/css/app.css
+++ b/public/css/app.css
@@ -94,7 +94,7 @@ pre, code {
 /* line 3, _src/styles/content.scss */
 .content-container {
   width: 1000px;
-  margin: 90px auto;
+  margin: 180px auto 90px;
 }
 /* line 7, _src/styles/content.scss */
 .content-container .disqus-wrap {
@@ -133,19 +133,67 @@ pre, code {
 .footer-container .powerd-list > li:not(:nth-last-child(1)) {
   border-right: 1px solid #999999;
 }
-/* line 5, _src/styles/header.scss */
-.header {
-  background-color: #444444;
+/* line 6, _src/styles/header-float.scss */
+.header-container .site-control {
+  display: none;
+  position: absolute;
+  z-index: 12;
+  right: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  bottom: 10px;
+}
+/* line 15, _src/styles/header-float.scss */
+.header-container .site-control .control-rss {
+  color: white;
 }
 
-/* line 9, _src/styles/header.scss */
+/* line 21, _src/styles/header-float.scss */
+.header.float {
+  position: fixed;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=85);
+  opacity: 0.85;
+}
+/* line 26, _src/styles/header-float.scss */
+.header.float .header-container .site-title {
+  left: 10px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 16px;
+  bottom: 5px;
+}
+/* line 36, _src/styles/header-float.scss */
+.header.float .header-container .site-menu > li > a {
+  height: 40px;
+  line-height: 40px;
+  font-size: 14px;
+}
+/* line 43, _src/styles/header-float.scss */
+.header.float .header-container .site-owner {
+  display: none;
+}
+/* line 46, _src/styles/header-float.scss */
+.header.float .header-container .site-control {
+  display: block;
+}
+/* line 6, _src/styles/header.scss */
+.header {
+  background-color: #444444;
+  width: 100%;
+  position: absolute;
+  z-index: 20;
+  top: 0;
+  left: 0;
+}
+
+/* line 15, _src/styles/header.scss */
 .header-container {
   width: 1000px;
   margin: 0 auto;
   text-align: center;
   position: relative;
 }
-/* line 15, _src/styles/header.scss */
+/* line 21, _src/styles/header.scss */
 .header-container .site-title {
   display: block;
   position: absolute;
@@ -161,16 +209,16 @@ pre, code {
   -o-border-radius: 5px;
   border-radius: 5px;
 }
-/* line 29, _src/styles/header.scss */
+/* line 35, _src/styles/header.scss */
 .header-container .site-menu {
   font-size: 0;
 }
-/* line 32, _src/styles/header.scss */
+/* line 38, _src/styles/header.scss */
 .header-container .site-menu > li {
   display: inline-block;
   font-size: 16px;
 }
-/* line 36, _src/styles/header.scss */
+/* line 42, _src/styles/header.scss */
 .header-container .site-menu > li > a {
   color: white;
   display: block;
@@ -183,7 +231,7 @@ pre, code {
   -o-transition: color 0.2s ease;
   transition: color 0.2s ease;
 }
-/* line 45, _src/styles/header.scss */
+/* line 51, _src/styles/header.scss */
 .header-container .site-menu > li > a > b {
   position: absolute;
   display: block;
@@ -196,19 +244,19 @@ pre, code {
   -o-transition: height 0.2s ease;
   transition: height 0.2s ease;
 }
-/* line 55, _src/styles/header.scss */
+/* line 61, _src/styles/header.scss */
 .header-container .site-menu > li > a > span {
   position: relative;
 }
-/* line 59, _src/styles/header.scss */
+/* line 65, _src/styles/header.scss */
 .header-container .site-menu > li > a:hover {
   color: #444444;
 }
-/* line 62, _src/styles/header.scss */
+/* line 68, _src/styles/header.scss */
 .header-container .site-menu > li > a:hover > b {
   height: 100%;
 }
-/* line 70, _src/styles/header.scss */
+/* line 76, _src/styles/header.scss */
 .header-container .site-owner {
   display: block;
   position: absolute;
@@ -230,16 +278,16 @@ pre, code {
   -o-transition: width 0.3s ease;
   transition: width 0.3s ease;
 }
-/* line 87, _src/styles/header.scss */
+/* line 93, _src/styles/header.scss */
 .header-container .site-owner:hover {
   width: 280px;
 }
-/* line 90, _src/styles/header.scss */
+/* line 96, _src/styles/header.scss */
 .header-container .site-owner:hover .owner-info {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 95, _src/styles/header.scss */
+/* line 101, _src/styles/header.scss */
 .header-container .site-owner .owner-avatar {
   width: 150px;
   height: 150px;
@@ -255,7 +303,7 @@ pre, code {
   -o-border-radius: 50%;
   border-radius: 50%;
 }
-/* line 104, _src/styles/header.scss */
+/* line 110, _src/styles/header.scss */
 .header-container .site-owner .owner-avatar + b {
   display: block;
   position: absolute;
@@ -270,7 +318,7 @@ pre, code {
   border-radius: 50%;
   border: 1px solid rgba(255, 255, 255, 0.4);
 }
-/* line 116, _src/styles/header.scss */
+/* line 122, _src/styles/header.scss */
 .header-container .site-owner .owner-info {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -283,11 +331,11 @@ pre, code {
   width: 120px;
   margin-top: 15px;
 }
-/* line 124, _src/styles/header.scss */
+/* line 130, _src/styles/header.scss */
 .header-container .site-owner .owner-info a {
   color: #666666;
 }
-/* line 127, _src/styles/header.scss */
+/* line 133, _src/styles/header.scss */
 .header-container .site-owner .owner-info a:hover {
   color: black;
 }
