--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -4,7 +4,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-16647975-3', 'anson0370.github.io');
+  ga('create', 'UA-16647975-3', 'anson.so');
   ga('send', 'pageview');
 
 </script>
