--- a/_src/styles/markdown.scss
+++ b/_src/styles/markdown.scss
@@ -3,6 +3,7 @@
 $border-color: darken($color-rule-2, 20%);
 
 .md {
+  font-size: 14px;
   line-height: 2em;
 
   h1, h2, h3, h4, h5 {
@@ -10,11 +11,11 @@ $border-color: darken($color-rule-2, 20%);
   }
 
   h1 {
-    font-size: 2.5em;
+    font-size: 2em;
   }
 
   h2 {
-    font-size: 2em;
+    font-size: 1.8em;
   }
 
   h3 {
