--- a/public/css/app.css
+++ b/public/css/app.css
@@ -299,6 +299,7 @@ pre, code {
 .header-container .site-menu > li > a {
   color: white;
   display: block;
+  overflow: hidden;
   padding: 0 40px;
   height: 90px;
   line-height: 90px;
@@ -308,32 +309,34 @@ pre, code {
   -o-transition: color 0.2s ease;
   transition: color 0.2s ease;
 }
-/* line 51, _src/styles/header.scss */
-.header-container .site-menu > li > a > b {
+/* line 52, _src/styles/header.scss */
+.header-container .site-menu > li > a > span {
+  position: relative;
+}
+/* line 56, _src/styles/header.scss */
+.header-container .site-menu > li > a:before {
+  content: "";
   position: absolute;
   display: block;
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 0;
   background-color: #ecf0f1;
   -webkit-transition: height 0.2s ease;
   -moz-transition: height 0.2s ease;
   -o-transition: height 0.2s ease;
   transition: height 0.2s ease;
 }
-/* line 61, _src/styles/header.scss */
-.header-container .site-menu > li > a > span {
-  position: relative;
-}
-/* line 65, _src/styles/header.scss */
+/* line 68, _src/styles/header.scss */
 .header-container .site-menu > li > a:hover {
   color: #2c3e50;
 }
-/* line 68, _src/styles/header.scss */
-.header-container .site-menu > li > a:hover > b {
+/* line 71, _src/styles/header.scss */
+.header-container .site-menu > li > a:hover:before {
   height: 100%;
 }
-/* line 76, _src/styles/header.scss */
+/* line 79, _src/styles/header.scss */
 .header-container .site-owner {
   display: block;
   position: absolute;
@@ -355,16 +358,16 @@ pre, code {
   -o-transition: width 0.3s ease;
   transition: width 0.3s ease;
 }
-/* line 93, _src/styles/header.scss */
+/* line 96, _src/styles/header.scss */
 .header-container .site-owner:hover {
   width: 280px;
 }
-/* line 96, _src/styles/header.scss */
+/* line 99, _src/styles/header.scss */
 .header-container .site-owner:hover .owner-info {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 101, _src/styles/header.scss */
+/* line 104, _src/styles/header.scss */
 .header-container .site-owner .owner-avatar {
   width: 150px;
   height: 150px;
@@ -380,7 +383,7 @@ pre, code {
   -o-border-radius: 50%;
   border-radius: 50%;
 }
-/* line 110, _src/styles/header.scss */
+/* line 113, _src/styles/header.scss */
 .header-container .site-owner .owner-avatar + b {
   display: block;
   position: absolute;
@@ -395,7 +398,7 @@ pre, code {
   border-radius: 50%;
   border: 1px solid rgba(255, 255, 255, 0.4);
 }
-/* line 122, _src/styles/header.scss */
+/* line 125, _src/styles/header.scss */
 .header-container .site-owner .owner-info {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -408,11 +411,11 @@ pre, code {
   width: 120px;
   margin-top: 15px;
 }
-/* line 130, _src/styles/header.scss */
+/* line 133, _src/styles/header.scss */
 .header-container .site-owner .owner-info a {
   color: #34495e;
 }
-/* line 133, _src/styles/header.scss */
+/* line 136, _src/styles/header.scss */
 .header-container .site-owner .owner-info a:hover {
   color: black;
 }
