new site-menu animation

--- a/_src/styles/global.scss
+++ b/_src/styles/global.scss
@@ -17,7 +17,7 @@ a {
   color: $color-rule-4;
   text-decoration: none;
 
-  @include transition(color, 0.2s);
+  @include transition(color 0.2s);
 
   &:hover {
     color: darken($color-rule-4, 10%);
