--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
       <div class="header-container">
         <h1 class="site-title">{{ site.name }}</h1>
         <ul class="site-menu">
-          <li><a href="/"><span><i class="icon-home icon-large"></i>&nbsp;HOME</span></a></li>
-          <li><a href="https://github.com/{{ site.author.github }}" target="_blank"><span><i class="icon-github icon-large"></i>&nbsp;GITHUB</span></a></li>
-          <li><a href="/about"><span><i class="icon-smile icon-large"></i>&nbsp;ABOUT</span></a></li>
+          <li><a href="/" data-content="&#xf015;"><span><i class="icon-home icon-large"></i>&nbsp;HOME</span></a></li>
+          <li><a href="https://github.com/{{ site.author.github }}" target="_blank" data-content="&#xf09b;"><span><i class="icon-github icon-large"></i>&nbsp;GITHUB</span></a></li>
+          <li><a href="/about" data-content="&#xf118;"><span><i class="icon-smile icon-large"></i>&nbsp;ABOUT</span></a></li>
         </ul>
         <div class="site-owner">
           <ul class="owner-info">
