--- a/_src/styles/header.scss
+++ b/_src/styles/header.scss
@@ -47,29 +47,34 @@ $header-height: 90px;
         height: $header-height;
         line-height: $header-height;
         position: relative;
-        @include transition(color 0.2s ease);
 
         > span {
           position: relative;
+          @include transition(top 0.2s ease);
         }
 
         &:before {
-          content: "";
+          content: attr(data-content);
+          font-family: FontAwesome;
+          font-size: 2em;
           position: absolute;
           display: block;
           left: 0;
-          bottom: 0;
+          top: -100%;
           width: 100%;
-          height: 0;
+          height: 100%;
           background-color: $color-rule-2;
-          @include transition(height 0.2s ease);
+          color: $font-color;
+          @include transition(top 0.2s ease);
         }
 
         &:hover {
-          color: $header-back-color;
+          > span {
+            top: 100%;
+          }
 
           &:before {
-            height: 100%;
+            top: 0;
           }
         }
       }
