--- a/public/css/app.css
+++ b/public/css/app.css
@@ -77,10 +77,10 @@ body {
 a {
   color: #1abc9c;
   text-decoration: none;
-  -webkit-transition: color, 0.2s;
-  -moz-transition: color, 0.2s;
-  -o-transition: color, 0.2s;
-  transition: color, 0.2s;
+  -webkit-transition: color 0.2s;
+  -moz-transition: color 0.2s;
+  -o-transition: color 0.2s;
+  transition: color 0.2s;
 }
 /* line 22, _src/styles/global.scss */
 a:hover {
@@ -304,39 +304,42 @@ pre, code {
   height: 90px;
   line-height: 90px;
   position: relative;
-  -webkit-transition: color 0.2s ease;
-  -moz-transition: color 0.2s ease;
-  -o-transition: color 0.2s ease;
-  transition: color 0.2s ease;
 }
-/* line 52, _src/styles/header.scss */
+/* line 51, _src/styles/header.scss */
 .header-container .site-menu > li > a > span {
   position: relative;
+  -webkit-transition: top 0.2s ease;
+  -moz-transition: top 0.2s ease;
+  -o-transition: top 0.2s ease;
+  transition: top 0.2s ease;
 }
 /* line 56, _src/styles/header.scss */
 .header-container .site-menu > li > a:before {
-  content: "";
+  content: attr(data-content);
+  font-family: FontAwesome;
+  font-size: 2em;
   position: absolute;
   display: block;
   left: 0;
-  bottom: 0;
+  top: -100%;
   width: 100%;
-  height: 0;
-  background-color: #ecf0f1;
-  -webkit-transition: height 0.2s ease;
-  -moz-transition: height 0.2s ease;
-  -o-transition: height 0.2s ease;
-  transition: height 0.2s ease;
-}
-/* line 68, _src/styles/header.scss */
-.header-container .site-menu > li > a:hover {
-  color: #2c3e50;
-}
-/* line 71, _src/styles/header.scss */
-.header-container .site-menu > li > a:hover:before {
   height: 100%;
+  background-color: #ecf0f1;
+  color: #34495e;
+  -webkit-transition: top 0.2s ease;
+  -moz-transition: top 0.2s ease;
+  -o-transition: top 0.2s ease;
+  transition: top 0.2s ease;
 }
-/* line 79, _src/styles/header.scss */
+/* line 72, _src/styles/header.scss */
+.header-container .site-menu > li > a:hover > span {
+  top: 100%;
+}
+/* line 76, _src/styles/header.scss */
+.header-container .site-menu > li > a:hover:before {
+  top: 0;
+}
+/* line 84, _src/styles/header.scss */
 .header-container .site-owner {
   display: block;
   position: absolute;
@@ -358,16 +361,16 @@ pre, code {
   -o-transition: width 0.3s ease;
   transition: width 0.3s ease;
 }
-/* line 96, _src/styles/header.scss */
+/* line 101, _src/styles/header.scss */
 .header-container .site-owner:hover {
   width: 280px;
 }
-/* line 99, _src/styles/header.scss */
+/* line 104, _src/styles/header.scss */
 .header-container .site-owner:hover .owner-info {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 104, _src/styles/header.scss */
+/* line 109, _src/styles/header.scss */
 .header-container .site-owner .owner-avatar {
   width: 150px;
   height: 150px;
@@ -383,7 +386,7 @@ pre, code {
   -o-border-radius: 50%;
   border-radius: 50%;
 }
-/* line 113, _src/styles/header.scss */
+/* line 118, _src/styles/header.scss */
 .header-container .site-owner .owner-avatar + b {
   display: block;
   position: absolute;
@@ -398,7 +401,7 @@ pre, code {
   border-radius: 50%;
   border: 1px solid rgba(255, 255, 255, 0.4);
 }
-/* line 125, _src/styles/header.scss */
+/* line 130, _src/styles/header.scss */
 .header-container .site-owner .owner-info {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -411,11 +414,11 @@ pre, code {
   width: 120px;
   margin-top: 15px;
 }
-/* line 133, _src/styles/header.scss */
+/* line 138, _src/styles/header.scss */
 .header-container .site-owner .owner-info a {
   color: #34495e;
 }
-/* line 136, _src/styles/header.scss */
+/* line 141, _src/styles/header.scss */
 .header-container .site-owner .owner-info a:hover {
   color: black;
 }
