new colour & smaller pre block in post

--- a/_src/styles/_common.scss
+++ b/_src/styles/_common.scss
@@ -13,15 +13,15 @@ $global-width: 1000px;
 // $color-rule-4: #E7E8D1;
 // $color-rule-5: #8E001C;
 
-$color-rule-1: #2c3e50;
-$color-rule-2: #ecf0f1;
-$color-rule-3: #95a5a6;
-$color-rule-4: #1abc9c;
-$color-rule-5: #1abc9c;
+$color-rule-1: #434A54;
+$color-rule-2: #E6E9ED;
+$color-rule-3: #AAB2BD;
+$color-rule-4: #48CFAD;
+$color-rule-5: #48CFAD;
 // color rule
 
 $light-font-color: white;
-$font-color: #34495e;
+$font-color: #434A54;
 $gray-font-color: $color-rule-3;
 
 // fonts
