--- a/_src/styles/markdown.scss
+++ b/_src/styles/markdown.scss
@@ -43,7 +43,7 @@ $border-color: darken($color-rule-2, 20%);
 
   pre {
     padding: 10px 20px;
-    margin: 0 1px;
+    margin: 1.5em 1px;
     overflow: scroll;
     line-height: 1.5em;
   }
