remove all post categories

--- a/_src/styles/_common.scss
+++ b/_src/styles/_common.scss
@@ -25,5 +25,5 @@ $font-color: #434A54;
 $gray-font-color: $color-rule-3;
 
 // fonts
-$normal-font: 'Arvo', 'Hiragino Sans GB', 微软雅黑, 黑体, sans-serif;
+$normal-font: 'Arvo', 'Hiragino Sans GB', '微软雅黑', '黑体', sans-serif;
 $code-font: 'Source Code Pro', monospace, 'Courier New';
