--- a/public/css/app.css
+++ b/public/css/app.css
@@ -70,7 +70,7 @@ body {
   background-color: #e6e9ed;
   color: #434a54;
   font-size: 12px;
-  font-family: "Arvo", "Hiragino Sans GB", 微软雅黑, 黑体, sans-serif;
+  font-family: "Arvo", "Hiragino Sans GB", "微软雅黑", "黑体", sans-serif;
 }
 
 /* line 16, _src/styles/global.scss */
